# qr-bill-bot

./: .gitignore  Cargo.toml  Dockerfile  flake.nix
src/: api.rs  bot.rs  fns.rs  main.rs  qr_decode.rs
