[package]
name = "qr-bill-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rqrr = "0.5.1"
image = "0.24.2"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
log = "0.4.17"
stderrlog = "0.5.1"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }